# home-api

./: .gitignore  README.md
fastapi/: Dockerfile
fastapi/app/: main.py  pyproject.toml
fastapi/app/routers/: operation_check.py
fastapi/app/settings/: config.py
